hphp/hack/test/typecheck/inout/bad_inout_use_arg3.php.exp
File "bad_inout_use_arg3.php", line 15, characters 11-15:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
